Bug 387307 - System Settings crash
Summary: System Settings crash
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.11.3
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
: 346335 390592 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-11-25 17:57 UTC by jakub.nowak98
Modified: 2018-03-01 01:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jakub.nowak98 2017-11-25 17:57:55 UTC
Application: systemsettings5 (5.11.3)
 (Compiled from sources)
Qt Version: 5.9.3
Frameworks Version: 5.40.0
Operating System: Linux 4.13.12-1-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:
Setting Ctrl+Shift+4 shortcut for moving window to Desktop 4.

-- Backtrace:
Application: System Settings (systemsettings5), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7ff258f69800 (LWP 6981))]

Thread 5 (Thread 0x7ff229f70700 (LWP 6987)):
#0  0x00007ff24e766ddd in  () at /usr/lib/libglib-2.0.so.0
#1  0x00007ff24e766fae in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#2  0x00007ff2554ed204 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#3  0x00007ff25549099b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007ff2552a927e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#5  0x00007ff25334dcf9 in  () at /usr/lib/libQt5Qml.so.5
#6  0x00007ff2552ae1cb in  () at /usr/lib/libQt5Core.so.5
#7  0x00007ff25096508a in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007ff254bb947f in clone () at /usr/lib/libc.so.6

Thread 4 (Thread 0x7ff23216e700 (LWP 6985)):
#0  0x00007ff254baef7b in poll () at /usr/lib/libc.so.6
#1  0x00007ff24e766ed3 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007ff24e766fae in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007ff2554ed204 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007ff25549099b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007ff2552a927e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007ff25334dcf9 in  () at /usr/lib/libQt5Qml.so.5
#7  0x00007ff2552ae1cb in  () at /usr/lib/libQt5Core.so.5
#8  0x00007ff25096508a in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007ff254bb947f in clone () at /usr/lib/libc.so.6

Thread 3 (Thread 0x7ff23cd30700 (LWP 6983)):
#0  0x00007ff254baef7b in poll () at /usr/lib/libc.so.6
#1  0x00007ff24e766ed3 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007ff24e766fae in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007ff2554ed204 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007ff25549099b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007ff2552a927e in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007ff255908376 in  () at /usr/lib/libQt5DBus.so.5
#7  0x00007ff2552ae1cb in  () at /usr/lib/libQt5Core.so.5
#8  0x00007ff25096508a in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007ff254bb947f in clone () at /usr/lib/libc.so.6

Thread 2 (Thread 0x7ff245fac700 (LWP 6982)):
#0  0x00007ff254baef7b in poll () at /usr/lib/libc.so.6
#1  0x00007ff2511e88e0 in  () at /usr/lib/libxcb.so.1
#2  0x00007ff2511ea679 in xcb_wait_for_event () at /usr/lib/libxcb.so.1
#3  0x00007ff248b4990a in  () at /usr/lib/libQt5XcbQpa.so.5
#4  0x00007ff2552ae1cb in  () at /usr/lib/libQt5Core.so.5
#5  0x00007ff25096508a in start_thread () at /usr/lib/libpthread.so.0
#6  0x00007ff254bb947f in clone () at /usr/lib/libc.so.6

Thread 1 (Thread 0x7ff258f69800 (LWP 6981)):
[KCrash Handler]
#5  0x00007ff257190fc7 in QLabel::text() const () at /usr/lib/libQt5Widgets.so.5
#6  0x00007ff2586a2797 in  () at /usr/lib/libKF5XmlGui.so.5
#7  0x00007ff2554c224f in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#8  0x00007ff2526f0505 in KGlobalAccel::globalShortcutChanged(QAction*, QKeySequence const&) () at /usr/lib/libKF5GlobalAccel.so.5
#9  0x00007ff2526f3694 in  () at /usr/lib/libKF5GlobalAccel.so.5
#10 0x00007ff2554c2126 in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#11 0x00007ff2526ff557 in  () at /usr/lib/libKF5GlobalAccel.so.5
#12 0x00007ff2527015c6 in  () at /usr/lib/libKF5GlobalAccel.so.5
#13 0x00007ff255913abd in  () at /usr/lib/libQt5DBus.so.5
#14 0x00007ff2554c2b72 in QObject::event(QEvent*) () at /usr/lib/libQt5Core.so.5
#15 0x00007ff257054f5c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#16 0x00007ff25705ca36 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#17 0x00007ff255492570 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#18 0x00007ff255494dc6 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /usr/lib/libQt5Core.so.5
#19 0x00007ff2554edbf4 in  () at /usr/lib/libQt5Core.so.5
#20 0x00007ff24e765270 in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#21 0x00007ff24e766f69 in  () at /usr/lib/libglib-2.0.so.0
#22 0x00007ff24e766fae in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#23 0x00007ff2554ed1e1 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#24 0x00007ff25549099b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#25 0x00007ff2554999e8 in QCoreApplication::exec() () at /usr/lib/libQt5Core.so.5
#26 0x000055c1f5ba1cca in  ()
#27 0x00007ff254ae3f6a in __libc_start_main () at /usr/lib/libc.so.6
#28 0x000055c1f5ba1d4a in _start ()

Reported using DrKonqi
Comment 1 David Edmundson 2017-12-08 16:37:51 UTC
Git commit 037a4ffa467d8ff720e3fa6e20adfe739e88d21f by David Edmundson.
Committed on 08/12/2017 at 15:46.
Pushed by davidedmundson into branch 'master'.

Disconnect shortcutedit slot on widget destruction

Summary:
If the widget is destroyed the connect still exists with a dangling
capture.

Test Plan: Compiles.

Reviewers: #plasma

Subscribers: plasma-devel, #frameworks

Tags: #plasma, #frameworks

Differential Revision: https://phabricator.kde.org/D9258

M  +1    -1    src/kshortcuteditwidget.cpp

https://commits.kde.org/kxmlgui/037a4ffa467d8ff720e3fa6e20adfe739e88d21f
Comment 2 Christoph Feck 2017-12-20 18:15:35 UTC
*** Bug 346335 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2018-03-01 01:58:14 UTC
*** Bug 390592 has been marked as a duplicate of this bug. ***