Disconnect shortcutedit slot on widget destruction

Summary:
If the widget is destroyed the connect still exists with a dangling
capture.

BUG: 387307

Test Plan: Compiles.

Reviewers: #plasma

Subscribers: plasma-devel, #frameworks

Tags: #plasma, #frameworks

Differential Revision: https://phabricator.kde.org/D9258